syntax = "proto3";

package app;
option php_generic_services = true;

import "app/user.proto";
import "google/protobuf/timestamp.proto";


service AuthenticationService {

    rpc Login (LoginRequest) returns (LoginResponse);

}


message LoginRequest {
    string username = 1;
    string password = 2;
}


message LoginResponse {
    string token = 1;
    google.protobuf.Timestamp tokenExpiresAt = 2;
    User user = 3;
}

